# ffplay-android

./: README.md
app/: build.gradle
app/src/androidTest/java/com/shixq/ffplay/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ffmpeg  ffprobe
app/src/main/cpp/: Application.mk  CMakeLists.txt
app/src/main/cpp/ffmpeg/: cmdutils.h  ffplay.c
app/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h
app/src/main/cpp/sdl2/: CMakeLists.txt
app/src/main/cpp/sdl2/src/core/android/: SDL_android.c
app/src/main/cpp/src/: Android.mk  cmdutils.c  cmdutils.h  config.h  ffplay.c  native-lib.cpp
app/src/main/java/com/shixq/ffplay/: ExeCommand.java  FileUtils.kt  MainActivity.kt
app/src/main/java/com/shixq/ffplay/sdl/: SDL.java  SDLActivity.java  SDLAudioManager.java  SDLControllerManager.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/shixq/ffplay/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
